<resources>
    <string name="app_name">ImoocTao</string>
    <string name="index_page">首页</string>
    <string name="find">发现</string>
    <string name="me">我的</string>
    <string name="coupon">优惠券</string>
    <string name="discount_card">折扣卡</string>
    <string name="shopping_cart">购物车</string>
    <string name="login_edt_username_hint">请输入用户名/邮箱/手机号</string>
    <string name="login_edt_pwd_hint">请输入登录密码</string>
    <string name="login">登录</string>
    <string name="find_pwd">找回密码</string>
    <string name="register">免费注册</string>
</resources>