<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/me_fragment_title">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:textSize="30sp"/>
        <ImageButton
            android:id="@+id/imgb_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:background="#0000"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>

    <EditText
        android:id="@+id/edt_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:hint="@string/login_edt_username_hint"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/edt_user_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/login_edt_pwd_hint"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:text="@string/login"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/btn_find_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:text="@string/find_pwd"
            android:textColor="@color/login_button"
            android:background="@color/transparent"
            />
        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/register"
            android:layout_alignParentRight="true"
            android:textColor="@color/login_button"
            android:background="@color/transparent"/>
    </RelativeLayout>
</LinearLayout>