<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--内容区域-->
    <RelativeLayout
        android:id="@+id/container_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </RelativeLayout>

    <!--主菜单区域-->
    <LinearLayout
        android:id="@+id/container_menu"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--主菜单-->
        <LinearLayout
            android:id="@+id/menu_main"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_main_ico_selector"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_page"
                android:textColor="@color/menu_text_selector"
                android:textSize="18sp"/>
        </LinearLayout>

        <!--发现菜单-->
        <LinearLayout
            android:id="@+id/menu_find"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_find_ico_selector"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find"
                android:textColor="@color/menu_text_selector"
                android:textSize="18sp"/>
        </LinearLayout>

        <!--我的菜单-->
        <LinearLayout
            android:id="@+id/menu_me"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_me_ico_selector" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me"
                android:textColor="@color/menu_text_selector"
                android:textSize="18sp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>