<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--头部-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/me_fragment_title">
        <ImageButton
            android:id="@+id/imgb_login"
            android:scaleType="fitCenter"
            android:layout_centerHorizontal="true"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/login_btn"
            android:background="#0000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgb_login"
            android:orientation="horizontal"
            android:paddingBottom="10dp">
            <!--优惠券-->
            <RelativeLayout
                android:id="@+id/rl_coupon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageButton
                    android:id="@+id/ibt_coupon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/me_menu_go"
                    android:scaleType="fitCenter"
                    android:layout_centerHorizontal="true"
                    android:background="#0000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ibt_coupon"
                    android:text="@string/coupon"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"/>
            </RelativeLayout>
<!--            折扣卡-->
            <RelativeLayout
                android:id="@+id/rl_discount_card"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageButton
                    android:id="@+id/ibt_discount_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/me_menu_sail"
                    android:scaleType="fitCenter"
                    android:layout_centerHorizontal="true"
                    android:background="#0000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ibt_discount_card"
                    android:text="@string/discount_card"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"/>
            </RelativeLayout>
<!--            购物车-->
            <RelativeLayout
                android:id="@+id/rl_shopping_cart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageButton
                    android:id="@+id/ibt_shopping_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/me_menu_yh"
                    android:scaleType="fitCenter"
                    android:layout_centerHorizontal="true"
                    android:background="#0000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ibt_shopping_cart"
                    android:text="@string/shopping_cart"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <!--头部完-->

    <ListView
        android:id="@+id/lv_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
</LinearLayout>